--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 #timer-app{
 
 	font-family: lato, sans-serif;
-	font-size: 50px;
+	font-size: 45px;
 	line-height: 1.6em;
+  text-align: center;
 	/*float:left;*/
 	width:70%;
 	background: #202020;
@@ -16,7 +17,7 @@
 }
 
 
-h5{
+h6{
 	background-color: #0e2ca5;
 	border-radius: 8px;
 	text-align: center;
