--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
+
+
 #timer-app{
 
-	font-family: lato, sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
+	
 	font-size: 45px;
 	line-height: 1.6em;
   text-align: center;
