--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 	/*background-color: #008080;*/
 	background-color: #f0ad4e;
 	margin: auto;
-  background-size: auto;
+  /*background-size: auto;*/
 }
 
 
@@ -25,6 +25,7 @@ h6{
 	background-color: #0e2ca5;
 	border-radius: 8px;
 	text-align: center;
+   background-size: auto;
 }
 
 @media(max-width: 600px){
