--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 	background-color: #f0ad4e;
 	margin: auto;
   /*background-size: auto;*/
+  box-sizing: border-box;
 }
 
 
@@ -25,14 +26,23 @@ h6{
 	background-color: #0e2ca5;
 	border-radius: 8px;
 	text-align: center;
-   background-size: auto;
+  background-size: auto;
+  box-sizing: border-box;
+  background-position: 0px 0px, right 3em bottom 2em;
 }
 
 @media(max-width: 600px){
   #timer-app{
+
     width: 100%;
-    /*float: none;*/
+    font-size: 20px;
   }
+
+  h6{
+
+    font-size: 22px;
+
+}
 
 
 
